Change emails in example files to fake emails
Instead of using "email1", "email2", etc., generate a set of fake
emails and use those instead.

--- a/inst/testdata/example.html
+++ b/inst/testdata/example.html
@@ -54,17 +54,17 @@
                               <td>
                                 Project1 </td>
                               <td>
-                                email1
+                                nia.vonrueden@yahoo.com
                               <td>
-                                email2
+                                nia.vonrueden@yahoo.com
                               </td>
                               <td>
-                                email3; email4
+                                koelpin.kathaleen@gmail.com; ilona.cartwright@yahoo.com
                               </td>
                               <td>
                               </td>
                               <td>
-                                email5
+                                sdenesik@hotmail.com
                             </tr>
                             <tr>
                               <td>
@@ -76,11 +76,11 @@
                               <td>
                                 Project2 </td>
                               <td>
-                                email6
+                                karren.schmeler@group.biz
                               <td>
                               </td>
                               <td>
-                                email6
+                                karren.schmeler@group.biz
                               <td>
                               </td>
                               <td>
