Fix example data such that the same person isn't a PI and Co-PI
The test data had the same fake email address for the PI and Co-PI
fields from the same study, which doesn't make sense. Use a new fake
email for the Co-PI from this study. Update the README so the new
email is displayed.

--- a/inst/testdata/example.html
+++ b/inst/testdata/example.html
@@ -56,7 +56,7 @@
                               <td>
                                 nia.vonrueden@yahoo.com
                               <td>
-                                nia.vonrueden@yahoo.com
+                                fnitzsche@gmail.com
                               </td>
                               <td>
                                 koelpin.kathaleen@gmail.com; ilona.cartwright@yahoo.com
