Replace "This study's short name" with "Study's short name"
The header on the website table changed to use the term "Study's
short name" instead of "This study's short name". Fix the code to
rename those columns. Also fix testdata to match.

--- a/inst/testdata/example.html
+++ b/inst/testdata/example.html
@@ -28,7 +28,7 @@
                               <th>
                               </th>
                               <th>
-                                This study&#039;s short name </th>
+                                Study&#039;s short name </th>
                               <th>
                                 Project </th>
                               <th>
